添加表单验证和提交插件

--- a/views/teacher/add.html
+++ b/views/teacher/add.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>学IT - 后台管理系统</title>
     <?php include('./views/common/style.html'); ?>
+    <link rel="stylesheet" tyoe="text/css" href="/public/assets/bootstrap-datepicker/css/bootstrap-datepicker.css">
 </head>
 <body>
     
@@ -14,7 +15,7 @@
         <div class="container-fluid">
             <!-- 头部 -->
             <?php include('./views/common/header.html'); ?>
-            <div class="body teacher" id="teacherInfo">
+            <div class="body teacher" id="teacherInfo">-
                 <!-- 挖个大坑 -->
             </div>
         </div>
@@ -30,26 +31,32 @@
                     {{if tc_id}}
                     <input type="hidden" name="tc_id" value="{{tc_id}}">
                     {{/if}}
-                        <div class="form-group">
+                       <div class="form-group">
                             <label for="" class="col-xs-3 control-label">姓名</label>
                             <div class="col-xs-4">
-                                <input name="tc_name" value="{{tc_name}}" type="text" class="form-control input-sm" placeholder="讲师名称">
+                                <input data-required data-description='tcName' data-describedby='tcNameInfo' name="tc_name" value="{{tc_name}}" type="text" class="form-control input-sm" placeholder="讲师名称">
                             </div>
+                            <div class="col-xs-2" id="tcNameInfo"></div>
                         </div>
                         {{if !tc_id}}
                         <div class="form-group">
                             <label for="" class="col-xs-3 control-label">密码</label>
                             <div class="col-xs-4">
-                                <input name="tc_pass" type="password" class="form-control input-sm">
+                                <input data-required data-description='tcPass' data-describedby='tcPassInfo' data-pattern='^\d{6}$' name="tc_pass" type="password" class="form-control input-sm">
                             </div>
+                             <div class="col-xs-2" id="tcPassInfo"></div>
                         </div>
+                        
                         {{/if}}
                         <div class="form-group">
                             <label for="" class="col-xs-3 control-label">入职时间</label>
                             <div class="col-xs-4">
-                                <input name="tc_join_date" value="{{tc_join_date}}" type="text" class="form-control input-sm">
+                                <input data-required data-description='tcJoinDate' data-describebdy='tcJoinDateInfo' data-provide="datepicker" data-date-language="zh-CN" data-date-format="yyyy-mm-dd" name="tc_join_date" value="{{tc_join_date}}" type="text" class="form-control input-sm">
                             </div>
+                            <div class="col-xs-2" id="tcJoinDateInfo"></div>
                         </div>
+                        
+                        
                         <div class="form-group">
                             <label for="" class="col-xs-3 control-label">类型</label>
                             <div class="col-xs-2">
@@ -72,7 +79,7 @@
                         </div>
                         <div class="form-group">
                             <div class="col-xs-7">
-                            <input id="teacherBtn" type="buuton" value="提交" class="btn btn-success btn-sm pull-right">
+                            <input id="teacherBtn" type="submit" value="提交" class="btn btn-success btn-sm pull-right">
                             </div>                          
                         </div>
                     </form>
