--- a/views/main/index.html
+++ b/views/main/index.html
@@ -57,6 +57,9 @@
 
     
     <?php include('./views/common/script.html'); ?>
+    <script type="text/javascript">
+        require(['index'])
+    </script>
     
     <script>
 
